Use library container for portable dependencies
Fixes issue #2

--- a/class-responsability-assignment/mdeo/uk.ac.kcl.mdeoptimise.cra.solutions/.classpath
+++ b/class-responsability-assignment/mdeo/uk.ac.kcl.mdeoptimise.cra.solutions/.classpath
@@ -4,8 +4,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="xtend-gen"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/home/alxbrd/Desktop/eclipse/plugins/uk.ac.kcl.mdeoptimise_1.0.0.201710150050.jar"/>
-	<classpathentry kind="lib" path="/home/alxbrd/Desktop/eclipse/plugins/org.eclipse.emf.ecore_2.13.0.v20170609-0707.jar"/>
-	<classpathentry kind="lib" path="/home/alxbrd/Desktop/eclipse/plugins/org.eclipse.emf.common_2.13.0.v20170609-0707.jar"/>
+	<classpathentry kind="con" path="MDEOptimiser/default"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
