--- a/stack-case-study/mdeo/.classpath
+++ b/stack-case-study/mdeo/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="src" path="xtend-gen"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="uk.ac.kcl.mdeoptimise.MDEO_CONTAINER/dsl"/>
+	<classpathentry kind="lib" path="lib/org.apache.commons.math3_3.4.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
