--- a/nrp/mdeo/uk.ac.kcl.mdeoptimise.nrp.solutions/.gitignore
+++ b/nrp/mdeo/uk.ac.kcl.mdeoptimise.nrp.solutions/.gitignore
@@ -1,2 +1,31 @@
-bin/
+# Ignore Intellij project files
+*.iml
+.idea/
+
+# XTend Ignore Files
+bin
+.DS_Store
+target
+*.xtendbin
+*.java._trace
+*.java_trace
 xtend-gen/
+
+# Ignore specific eclipse project files
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+
+# Eclipse core
+# .project
+# .classpath
+
+mdeo-results/
