Working case study without container

--- a/service-composition/mdeo/uk.ac.kcl.mdeoptimise.service-composition.surrogates/infrastructure/surrogates/Dockerfile
+++ b/service-composition/mdeo/uk.ac.kcl.mdeoptimise.service-composition.surrogates/infrastructure/surrogates/Dockerfile
@@ -5,4 +5,6 @@ MAINTAINER Alex Burdusel alexandru.burdusel@kcl.ac.uk
 # Expose the R server port
 COPY ./scripts/ /var/app/current/scripts
 
+EXPOSE 9090
+
 #RUN Rscript /var/app/current/scripts/dependencies.R
