--- a/service-composition/mdeo/uk.ac.kcl.mdeoptimise.service-composition.solutions/.classpath
+++ b/service-composition/mdeo/uk.ac.kcl.mdeoptimise.service-composition.solutions/.classpath
@@ -13,5 +13,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/uk.ac.kcl.mdeoptimise.cra.solutions"/>
+	<classpathentry kind="lib" path="lib/uk.ac.kcl.mdeoptimise.service-composition.surrogates-0.0.1-SNAPSHOT-jar-with-dependencies.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.emf.henshin.model_1.5.0.201801310538.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
