--- a/service-composition/mdeo/uk.ac.kcl.mdeoptimise.service-composition.surrogates/infrastructure/docker-compose.yml
+++ b/service-composition/mdeo/uk.ac.kcl.mdeoptimise.service-composition.surrogates/infrastructure/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - |
         cd /var/app/current
         mvn clean compile package
+        export R_HOME="/usr/lib64/R"
         java -jar target/uk.ac.kcl.mdeoptimise.service-composition.surrogates-0.0.1-SNAPSHOT-jar-with-dependencies.jar
     volumes:
         - ../:/var/app/current
