--- a/service-composition/mdeo/uk.ac.kcl.mdeoptimise.service-composition.surrogates/pom.xml
+++ b/service-composition/mdeo/uk.ac.kcl.mdeoptimise.service-composition.surrogates/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>kryo</artifactId>
 			<version>4.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+		    <version>24.0-jre</version>
+		</dependency>
 	</dependencies>
 
 	<build>
