--- a/scrum-planning/mdeo/uk.ac.kcl.mdeoptimise.scrum.planning.solutions.generator/pom.xml
+++ b/scrum-planning/mdeo/uk.ac.kcl.mdeoptimise.scrum.planning.solutions.generator/pom.xml
@@ -49,6 +49,11 @@
             <version>2.2.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>0.12</version>
+        </dependency>
 
     </dependencies>
 </project>
