--- a/class-responsability-assignment/mdeo/uk.ac.kcl.mdeoptimise.cra.solutions/.classpath
+++ b/class-responsability-assignment/mdeo/uk.ac.kcl.mdeoptimise.cra.solutions/.classpath
@@ -5,5 +5,8 @@
 	<classpathentry kind="src" path="xtend-gen"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="uk.ac.kcl.mdeoptimise.MDEO_CONTAINER/dsl"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.emf.henshin.model_1.5.0.201801310538.jar"/>
+	<classpathentry kind="lib" path="lib/uk.ac.kcl.mdeoptimise.service-composition.surrogates-0.0.1-SNAPSHOT-jar-with-dependencies.jar"/>
+	<classpathentry kind="lib" path="lib/org.apache.commons.math3_3.4.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
