--- a/nrp/mdeo/uk.ac.kcl.mdeoptimise.nrp.solutions/.project
+++ b/nrp/mdeo/uk.ac.kcl.mdeoptimise.nrp.solutions/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>uk.ac.kcl.mdeoptimise.cra.solutions</name>
+	<name>uk.ac.kcl.mdeoptimise.nrp.solutions</name>
 	<comment></comment>
 	<projects>
 	</projects>
