--- a/scrum-planning/mdeo/scrum-planning/pom.xml
+++ b/scrum-planning/mdeo/scrum-planning/pom.xml
@@ -8,7 +8,7 @@
 	<name>xtend-quickstart</name>
 	<properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <xtend.version>2.14.0</xtend.version>
+        <xtend.version>2.13.0</xtend.version>
 	</properties>
 	<build>
 		<plugins>
@@ -47,12 +47,16 @@
 			<artifactId>org.eclipse.xtend.lib</artifactId>
 			<version>${xtend.version}</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
 		<dependency>
-		    <groupId>org.apache.commons</groupId>
-		    <artifactId>commons-math3</artifactId>
-		    <version>3.2</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
 		</dependency>
-		
+				<dependency>
+			<groupId>uk.ac.kcl.mdeoptimise</groupId>
+			<artifactId>standalone</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 </project>
